fix footer margin on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -378,14 +378,30 @@ ul li del {
   justify-content: space-between;
   margin: 2rem auto;
 }
+@media only screen and (min-device-width: 768px) {
+  footer,
+  nav {
+    margin-top: 4.375rem;
+  }
+}
 footer,
 nav {
-  margin-top: 4.375rem;
   padding-top: 1.75rem;
   max-width: 41rem;
   margin-left: auto;
   margin-right: auto;
   font-size: 0.8em;
+}
+footer a[href]:not(.anchor):not(.gatsby-resp-image-link),
+nav a[href]:not(.anchor):not(.gatsby-resp-image-link) {
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0) 0px,
+    var(--text) 0px,
+    var(--text) 0px,
+    rgba(0, 0, 0, 0) 1px
+  );
 }
 nav ul {
   display: flex;
@@ -452,6 +468,7 @@ nav ul {
 
 .tags {
   display: flex;
+  flex-wrap: wrap;
   margin: 1rem 0 2rem 0;
 }
 .tag:not(.token) {
@@ -459,6 +476,7 @@ nav ul {
   border: 1px solid var(--border-color);
   border-radius: 3px;
   margin-right: 0.6rem;
+  margin-bottom: 0.6rem;
   padding: 0.2rem 0.9rem;
   height: 1.5rem;
   vertical-align: bottom;
